Resolved issue with invalid text alignment

--- a/web/web-frontend/src/css/App.css
+++ b/web/web-frontend/src/css/App.css
@@ -30,7 +30,7 @@ body {
   margin: 0;
   position: relative;
   color: #222222;
-  text-align: center;
+  text-align: left;
   background-color: #FFF;
 }
 
